--- a/styles.css
+++ b/styles.css
@@ -63,44 +63,105 @@ body {
     cursor: not-allowed;
 }
 
-.board.x .cell:hover {
+.cell.x::before,
+.cell.x::after,
+.cell.circle::before {
+    background-color: black;
+}
 
+
+
+
+/* for overwriting it we are putting this snippet code just below */
+.board.x .cell:not(.x):not(.circle):hover::before,
+.board.x .cell:not(.x):not(.circle):hover::after,
+.board.circle .cell:not(.x):not(.circle):hover::before,
+.board.circle .cell:not(.x):not(.circle):hover::after{
+    background-color: lightgrey;
 }
 
 
 /* making x  */
 .cell.x::before,
-.cell.x::after {
+.cell.x::after,
+.board.x .cell:not(.x):not(.circle):hover::before,
+.board.x .cell:not(.x):not(.circle):hover::after {
     content: '';
     position: absolute;
     width: calc(var(--mark-size) * .15);
     height: var(--mark-size);
-    background-color: black;
 }
 
-.cell.x::before{
+
+
+.cell.x::before,
+.board.x .cell:not(.x):not(.circle):hover::before{
     transform: rotate(45deg);
 }
-.cell.x::after{
+.cell.x::after,
+.board.x .cell:not(.x):not(.circle):hover::after{
     transform: rotate(-45deg);
 }
 
 /* making o  */
+/* for making hover effect o we have to repeat same process again */
 
-.cell.circle::before,
-.cell.circle::after{
+.cell.circle::before, 
+.cell.circle::after,
+.board.circle .cell:not(.x):not(.circle):hover::before,
+.board.circle .cell:not(.x):not(.circle):hover::after{
     content: '';
     position: absolute;
     border-radius: 50%;
 }
 
-.cell.circle::before{
+.cell.circle::before,
+.board.circle .cell:not(.x):not(.circle):hover::before{
     width: var(--mark-size);
     height: var(--mark-size);
-    background-color: black;
 }
-.cell.circle::after{
+.cell.circle::after,
+.board.circle .cell:not(.x):not(.circle):hover::after{
     width: calc(var(--mark-size) * .7);
     height: calc(var(--mark-size)*.7);
+    background-color:white;
+}
+
+/* styling restart button and page */
+/* winning message */
+.winning-message {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, .9);
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 5rem;
+    flex-direction: column;
+}
+
+/* winning button */
+
+.winning-message button {
+    font-size: 3rem;
     background-color: white;
+    border: 1px solid black;
+    padding: .25em .5em;
+    cursor: pointer;
+}
+
+/* winning button hover */
+
+.winning-message button:hover {
+    background-color: black;
+    color: white;
+    border-color: white;
+}
+
+.winning-message.show{
+    display: flex;
 }
